--- a/HeartRateMonitor/res/layout/main.xml
+++ b/HeartRateMonitor/res/layout/main.xml
@@ -15,6 +15,6 @@
         android:id="@+id/testButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="@string/test_button" />
 
 </LinearLayout>
