refactor preview class

--- a/HeartRateMonitor/res/layout/main.xml
+++ b/HeartRateMonitor/res/layout/main.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical" >
 
     <FrameLayout
-        android:id="@+id/cameraPreview"
+        android:id="@+id/previewFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.69" >
+        android:layout_weight="0.65" >
     </FrameLayout>
 
     <Button
