--- a/HeartRateMonitor/res/layout/main.xml
+++ b/HeartRateMonitor/res/layout/main.xml
@@ -4,11 +4,20 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <ImageView
+        android:id="@+id/imageViewHeartRate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_weight="0.9"
+        android:src="@drawable/heartbeat" />
+
     <FrameLayout
         android:id="@+id/previewFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.65" >
+
     </FrameLayout>
 
     <Button
