--- a/HeartRateMonitor/res/layout/main.xml
+++ b/HeartRateMonitor/res/layout/main.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/imageViewHeartRate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="top"
         android:layout_weight="0.9"
         android:src="@drawable/heartbeat" />
